Add sidebar and appbar

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,9 +15,10 @@
     ],
     "parserOptions": {
         "ecmaFeatures": {
-            "jsx": true
+            "jsx": true,
+            "modules": true
         },
-        "ecmaVersion": "latest",
+        "ecmaVersion": 11,
         "sourceType": "module"
     },
     "plugins": [
