--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
@@ -20,13 +21,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-
     "lint": "npx eslint src",
     "lint:fix": "npm run lint -- --fix",
-
     "prettier": "npx prettier src --check",
     "prettier:fix": "npm run prettier -- --write",
-
     "format": "npm run prettier:fix && npm run lint:fix"
   },
   "eslintConfig": {
