--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
+    "uniqid": "^5.4.0",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
