--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.28.0",
+    "moment": "^2.29.3",
     "react": "^17.0.2",
+    "react-calendar": "^3.7.0",
     "react-d3-tree": "^3.3.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
@@ -24,7 +26,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "CHOKIDAR_USEPOLLING=true react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
