--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
+    "email-validator": "^2.0.4",
     "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-calendar": "^3.7.0",
