--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -9,7 +9,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install packages
-      run: npm ci
+      run: npm install
 
     - name: Format with Prettier - fix if possible
       run: npm run prettier -- --write
